# tailscale-mcp

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  INSTALL.md  Makefile  README.md  RELEASE_NOTES_v2.0.0.md  build.ps1  claude_desktop_config_example.json  docker-compose.yml  dxt_manifest.json  dxt_prompts.md  env.example  extension.toml  glama.json  manifest.json  mcpb.json  pyproject.toml  requirements.txt  restart.bat  setup.ps1  setup.py  start.ps1  stop.bat  tailscale-mcp.code-workspace  temp_status.txt
.cursor/rules/: architect.mdc
.cursor/skills/mcp-server-developer/: SKILL.md
.cursor/skills/mcp-server-developer/modules/: ai-ide-development.md  architecture-and-standards.md  core-guidance.md  ecosystem-and-publishing.md  mcp-history-and-outlook.md  minimal-mcp-server.md  research-checklist.md
.github/workflows/: ci-cd.yml  ci.yml  dependencies.yml  docker.yml  quality.yml  test-matrix.yml
.windsurf/rules/global_rules/: rules1.md  rules2.md  rules3.md
.zed/: settings.json
docs/: API_REFERENCE.md  ARCHITECTURE_AND_DESIGN.md  COMPLETE_DOCUMENTATION_STRUCTURE.md  DETAILED_STATUS_REPORT.md  DOCSTRING_FIX_PLAN.md  DOCSTRING_FIX_PROGRESS.md  DOCUMENTATION_INDEX.md  DXT_PACKAGING_ISSUES.md  EXPANSION_IMPLEMENTATION_START.md  FASTMCP_ARCHITECTURE_ALIGNMENT.md  FUNNEL_AND_TAILDROP_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSTALL.md  MCP_DOCSTRING_PROMPT_RESOURCE_STANDARDS.md  MCP_PRODUCTION_CHECKLIST.md  MCP_PROMPTS_AND_RESOURCES.md  MERMAID_DIAGRAM_EXAMPLE.md  NEXT_STEPS.md  ORGANIZATION_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PRD.md  REFACTORING_PLAN.md  REPOSITORY_ASSESSMENT.md  RESOURCES_EXPLAINED.md  SAMPLE_STATUS_RESPONSE.md  STATUS_REPORT.md  STATUS_TOOL_USAGE.md  STORAGE_BACKENDS.md  TAILSCALE_MCP_EXPANSION_PLAN.md  TAILSCALE_MCP_PORTMANTEAU_TOOLS.md  VIEW_MERMAID_DIAGRAMS.md  WEBAPP.md  WHAT_IS_TAILSCALE.md  ZED_INTEGRATION.md  windsurf_assessment.md
docs/development/: AI_DEVELOPMENT_TOOLS_COMPARISON.md  DEBUGGING_LESSONS_LEARNED.md  PYTHON_DEPENDENCY_HELL_FIX.md  PYTHON_SNIPPETS_USAGE_GUIDE.md  README.md  SYSTEMATIC_PROJECT_UPDATES.md
docs/glama-platform/: CI_CD_GLAMA_OPTIMIZATION_GUIDE.md  GLAMA_AI_OPTIMIZATION_SUMMARY.md  GLAMA_AI_RESCAN_GUIDE.md  GLAMA_INTEGRATION.md  GOLD_STATUS_ACHIEVEMENT.md  GOLD_STATUS_UPDATE_2025_10_08.md  README.md
docs/integrations/: REBOOTX_INTEGRATION.md  TAILSCALE_INTEGRATION.md
docs/mcp-technical/: README.md  TROUBLESHOOTING_FASTMCP_2.12.md
docs/mcpb-packaging/: MCPB_BUILDING_GUIDE.md  MCPB_IMPLEMENTATION_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  README.md
docs/monitoring/: Architecture.md  Deployment.md  Grafana.md  Loki.md  MCP_MONITORING_STANDARDS.md  MONITORING_TEMPLATES.md  Prometheus.md  README.md  REBOOTX_INTEGRATION.md  REBOOTX_ON_PREM_SETUP_GUIDE.md  REBOOTX_QUICK_REFERENCE.md  TAPO_CAMERAS_DASHBOARD_TEMPLATES.md  TAPO_CAMERAS_MCP_MONITORING.md
examples/: grafana_dashboard_demo.py
monitoring/: README.md
monitoring/grafana/dashboards/: tailscale-comprehensive-monitoring.json  tailscale-device-activity.json  tailscale-logs-dashboard.json  tailscale-mcp-overview.json  tailscale-network-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
monitoring/rebootx-on-prem/: README.md  dashboards.json  docker-compose.rebootx.yml  servers.json
scripts/: backup-repo.ps1  extract_tool_modules.py  extract_tools.py  fix_all_indentation.py  fix_indentation_final.py  fix_tool_indentation.py  generate_tool_modules.py  rewrite_tools_clean.py  start-monitoring.ps1  start-rebootx-on-prem.ps1
skills/: TAILSCALE_EXPERT.md
src/: lib.rs
src/tailscalemcp/: __init__.py  __main__.py  api_client.py  config.py  device_management.py  exceptions.py  funnel.py  grafana_dashboard.py  log_api.py  magic_dns.py  mcp_server.bak  mcp_server.py  monitoring.py  prompts_and_resources.py  py.typed  server.py  taildrop.py  transport.py  version.py
src/tailscalemcp/client/: __init__.py  api_client.py  rate_limiter.py  retry.py
src/tailscalemcp/models/: __init__.py  device.py  policy.py  service.py  tailnet.py  user.py
src/tailscalemcp/operations/: __init__.py  analytics.py  audit.py  devices.py  keys.py  network.py  policies.py  policy_analyzer.py  reporting.py  services.py  tags.py
src/tailscalemcp/sampling/: __init__.py  tailscale_sampling_handler.py
src/tailscalemcp/tools/: __init__.py  _base.py  _helpers.py  _tool_types.py  automation_tool.py  backup_tool.py  device_tool.py  file_tool.py  funnel_tool.py  help_tool.py  integration_tool.py  lm_link_tool.py  mcp_tool_names.py  monitor_tool.py  network_tool.py  new_api_tool.py  partner_tailnets_tool.py  performance_tool.py  portmanteau_tools.py  portmanteau_tools.py.backup  reporting_tool.py  sampling_tool.py  security_tool.py  status_tool.py
src/tailscalemcp/utils/: __init__.py  tailscale_cli.py
tests/: test_mcp_server.py
tests/integration/: test_device_operations.py
tests/monitoring/: test_monitoring_integration.py  test_prometheus_metrics.py  test_structured_logging.py
tests/unit/: test_client.py  test_models.py  test_new_api_client.py  test_partner_grouping.py  test_server.py  test_server_errors.py  test_transport.py
web_sota/: .env.example  index.html  package-lock.json  package.json  start.ps1  start.ps1.bak.20260508_202256  stop.ps1  vite.config.ts
web_sota/src/: App.tsx
web_sota/src/common/: api.ts  apps-catalog.ts
web_sota/src/components/layout/: sidebar.tsx  topbar.tsx
web_sota/src/components/tailnet/: mermaid-block.tsx  (+1 more)
web_sota/src/pages/: Help.tsx  chat.tsx  control.tsx  dashboard.tsx  funnels.tsx  llm-status.tsx  lm-link.tsx  logs.tsx  mcp-connection.tsx  my-tailnet.tsx  nets.tsx  partner-tailnets.tsx  runbook.tsx  services.tsx  settings.tsx  stats.tsx  tools-explorer.tsx  visualizer.tsx
web_sota/src/types/: tailnet.ts
